--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
         "laravel/framework": "5.2.*",
         "laracasts/flash": "^2.0",
         "unisharp/laravel-filemanager": "^1.5",
-        "laravelcollective/html": "^5.2",
-        "phpclasses/php-diff": ">=1.0.1"
+        "laravelcollective/html": "^5.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -19,15 +18,6 @@
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "2.8.*|3.0.*"
     },
-    "repositories": [
-        {
-          "type": "composer",
-          "url": "https:\/\/www.phpclasses.org\/"
-        },
-        {
-          "packagist": false
-        }
-    ],
     "autoload": {
         "classmap": [
             "database"
